--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=--, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,12 +15,35 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello app</h1>
-      <a href="" class="btn btn-primary">click me</a>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img src="" alt="" />
+            12C | F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitaion: 0%</li>
+              <li>Humidity: 75%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a href="" target="_blank"></a>
+        Open-source code by iza Nalondwa
+      </small>
     </div>
 
     <script src="src/index.js"></script>
