--- a/index.html
+++ b/index.html
@@ -15,35 +15,44 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img src="" alt="" />
-            12C | F
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitaion: 0%</li>
-              <li>Humidity: 75%</li>
-              <li>Wind: 2 km/h</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>New York</h1>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>Clear</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                alt="Clear"
+              />
+              12°C|°F
+            </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitaion: 0%</li>
+                <li>Humidity: 75%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
+        <small>
+          <a href="https://github.com/Nalondwa/weather-app" target="_blank"
+            >Open-source code</a
+          >
+          by iza Nalondwa
+        </small>
       </div>
-      <small>
-        <a href="" target="_blank"></a>
-        Open-source code by iza Nalondwa
-      </small>
     </div>
 
     <script src="src/index.js"></script>
