--- a/index.html
+++ b/index.html
@@ -54,22 +54,20 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="Clear"
-                  id="icon"
-                />
+                <img src="" alt="Clear" id="icon" />
                 <div>
                   <strong id="temperature"></strong
-                  ><span class="units"> °C | <a href="#">°F</a></span>
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitaion: 0%</li>
-                <li>Humidity: <span id="humidity"></span></li>
-                <li>Wind: <span id="wind"></span></li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
