--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <div class="container">
+            <div class="d-flex flex-row">
+              <div class="p-2">Johannesburg</div>
+              <div class="p-2">London</div>
+              <div class="p-2">New York</div>
+              <div class="p-2">Paris</div>
+            </div>
+          </div>
+
           <form id="search-form" class="mb-3">
             <div class="row">
               <div class="col-9">
@@ -58,8 +67,8 @@
                 <div>
                   <strong id="temperature"></strong
                   ><span class="units"
-                    ><a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a></span
+                    ><a href="#" id="celsiusLink" class="active">°C</a> |
+                    <a href="#" id="fahrenheitLink">°F</a></span
                   >
                 </div>
               </div>
@@ -70,15 +79,49 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
+            <div class="container text-center">
+              <div class="row align-items-start">
+                <div class="col-2">
+                  Sun
+                  <div class="icons">☀️</div>
+
+                  <div>28°C</div>
+                </div>
+                <div class="col-2">
+                  Mon
+                  <div class="icons">☀️</div>
+
+                  <div>26°C</div>
+                </div>
+                <div class="col-2">
+                  Tue
+                  <div class="icons">☀️</div>
+
+                  <div>26°C</div>
+                </div>
+                <div class="col-2">
+                  Wed
+                  <div class="icons">⛅</div>
+
+                  <div>24°C</div>
+                </div>
+                <div class="col-2">
+                  Thurs
+                  <div class="icons">⛅</div>
+
+                  <div>24°C</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <small>
-          <a href="https://github.com/Nalondwa/weather-app" target="_blank"
-            >Open-source code</a
-          >
-          by iza Nalondwa
-        </small>
       </div>
+      <small>
+        <a href="https://github.com/Nalondwa/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Iza Nalondwa
+      </small>
     </div>
 
     <script src="src/index.js"></script>
