--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div>
                   <strong id="temperature"></strong
                   ><span class="units"
-                    ><a href="#" id="celsiusLink" class="active">°C</a> |
-                    <a href="#" id="fahrenheitLink">°F</a></span
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
                   >
                 </div>
               </div>
