--- a/index.html
+++ b/index.html
@@ -79,43 +79,26 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
-            <div class="container text-center">
-              <div class="row align-items-start">
+            <div class="weather-forecast">
+              <div class="row">
                 <div class="col-2">
-                  Sun
-                  <div class="icons">☀️</div>
-
-                  <div>28°C</div>
-                </div>
-                <div class="col-2">
-                  Mon
-                  <div class="icons">☀️</div>
-
-                  <div>26°C</div>
-                </div>
-                <div class="col-2">
-                  Tue
-                  <div class="icons">☀️</div>
-
-                  <div>26°C</div>
-                </div>
-                <div class="col-2">
-                  Wed
-                  <div class="icons">⛅</div>
-
-                  <div>24°C</div>
-                </div>
-                <div class="col-2">
-                  Thurs
-                  <div class="icons">⛅</div>
-
-                  <div>24°C</div>
+                  <div class="weather-forecast-date">Thu</div>
+                  <img
+                    src="http://openweathermap.org/img/wn/01n@2x.png"
+                    alt=""
+                    width="36"
+                  />
+                  <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-max">18</span>
+                    <span class="weather-forecast-temperature-min">12</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <small>
         <a href="https://github.com/Nalondwa/weather-app" target="_blank"
           >Open-source code</a
